--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
+  padding: 10px;
+}
+
+.grid-item {
+  padding: 10px;
+}
+
+div h2 {
+  text-align: center;
+  font-size: 15px;
+}
